fix Sonar errors